--- a/src/index.css
+++ b/src/index.css
@@ -1,18 +1,18 @@
-*{
+* {
   margin: 0;
   box-sizing: border-box;
 }
 body {
-  background-image: linear-gradient(to bottom, #282c34 ,#282c34ed,  #282c34);
+  background-image: linear-gradient(to bottom, #282c34, #282c34ed, #282c34);
   height: 100vh;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
